[package]
name = "c"
version = "0.2.0"
authors = ["Odaka Ui <31593320+odakaui@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25"
dirs = "3"
chrono = "0.4"
anyhow = "1"
rand = "0.8"
clap = "2.33"
